# c_temp_monitor

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: Temperature Monitoring System.docx
includes/: config.h  temperature_monitor.h
includes/drivers/: eeprom.h  led.h  ring_buffer.h  temperature_sensor.h
includes/hal/: hal_if.h
sources/: main.c  temperature_monitor.c
sources/drivers/: eeprom.c  led.c  ring_buffer.c  temperature_sensor.c
sources/hal/: mock_hal.c  real_hal.c
